# opencraft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  crosscompiling.mk  localbuild.mk
.github/: README.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  ingame_bug.yml  project_setup.yml
.github/actions/build_notifier/: action.yml
.github/actions/notify_failure/: action.yml
.github/actions/notify_success/: action.yml
.github/actions/upload_build/: action.yml
.github/actions/webhook_ci/: action.yml  entrypoint.sh
.github/workflows/: linux.yml  ms-dos.yml  windows.yml
cmake/: DJGPP-toolchain.cmake  Linux.cmake  MSDOS.cmake  Windows.cmake
misc/linux/: ubuntu.gcc.mk
misc/msdos/: debian.djgpp.mk
misc/msdos/glfw_src/: glfw3.c
misc/windows/: ubuntu.mingw.mk
src/: OpenCraft.sln  OpenCraft.vcxproj  OpenCraft.vcxproj.filters  main.c
src/include/: README.md  nc_stdbool.h  nc_stddef.h  nc_stdint.h  nc_stdlib.h  netco.h
src/include/GLFW/: glfw3.h
src/include/ncintern/: intsizes.h  inttypes.h  osdetect.h  tydetect.h
src/netco/: nc_stdint.h  netco.h
src/netco/ncintern/: inttypes.h  osdetect.h  tydetect.h
